# Simple-Linux-ListenSocket

./: CMakeLists.txt  Makefile  README.md  listen-socket.cpp  listen-socket.hpp  plain-socket.cpp  plain-socket.hpp  test-client.cpp  test-server.cpp  test.cpp
include/: copyable-atomic.hpp  copyable_atomic.hpp  listen-socket.hpp  listen_socket.hpp  plain-socket.hpp  plain_socket.hpp  read-listener.hpp  read_listener.hpp
src/: copyable_atomic.cpp  listen-socket.cpp  listen_socket.cpp  plain-socket.cpp  plain_socket.cpp
src/applications/: test_client.cpp  test_server.cpp
